# demixer

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
scripts/: adtof_worker.py  btc_worker.py  mt3_worker.py  roformer_worker.py
src/demixer/: __init__.py
src/demixer/app/: __init__.py  gui.py  pipeline_runner.py
src/demixer/cli/: __main__.py
src/demixer/core/: bundle.py  ingest.py  loop_detect.py  separation.py  separation_roformer.py  workers.py
src/demixer/core/analysis/: chords.py  chords_btc.py  harmony.py  key.py  tempo_beats.py
src/demixer/core/project/: dawproject.py  dragin.py  flstudio.py  reaper.py
src/demixer/core/score/: musicxml.py  quantize.py  render.py
src/demixer/core/transcription/: drums.py  drums_adtof.py  mt3.py  pitched.py
src/demixer/eval/: __init__.py  groundtruth_matrix.py  organic_consistency.py  render.py  separation_sdr.py  synth_drums.py  synth_groundtruth.py
tests/: test_analysis.py  test_analysis_chords.py  test_app.py  test_bundle.py  test_cli.py  test_groundtruth_matrix.py  test_harmony.py  test_ingest.py  test_loop_detect.py  test_project_dawproject.py  test_project_dragin.py  test_project_flstudio.py  test_project_reaper.py  test_score.py  test_separation.py  test_separation_roformer.py  test_sota_workers.py  test_transcription_drums.py  test_transcription_pitched.py
tests/groundtruth/: fetch_isophonics.sh
