[project]
name = "demixer"
version = "0.0.1"
description = "Stem separation, transcription, sheet music, and DAW round-trip for any audio track."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "revelri" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyflp>=2.2.1",   # round-trip parser for the .flp writer tests (not a runtime dep)
    "pretty_midi",    # MIDI parsing in the DAW exporters
    "soundfile",      # writes the throwaway WAVs the .flp tests reference
]
gui = [
    "PySide6>=6.6",
]

[project.scripts]
demixer = "demixer.cli.__main__:main"

[project.gui-scripts]
demixer-gui = "demixer.app.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demixer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/demixer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
